Configuración para deploy en Render: variables de entorno, CORS dinámico y render.yaml